# scruff

./: Cargo.toml  build.ps1  build.py
.github/workflows/: ci.yml  release.yml
chocolatey/: package.nuspec
chocolatey/tools/: ChocolateyInstall.ps1
cli/: Cargo.toml
cli/src/: main.rs
cli/src/command/: clean.rs  mod.rs
cli/src/ui/: cli.rs
lib/: Cargo.toml
lib/src/: dir_traverser.rs  lib.rs  ui.rs
lib/src/cleaner/: builder.rs  clean.rs  load.rs  match_file.rs  mod.rs
lib/src/ruleset/: builder.rs  load.rs  mod.rs  operation.rs
lib/src/util/: config.rs  fs.rs  mod.rs  path.rs
