[package]
name = "scruff_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "scruff"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.1", features = ["derive"] }
scruff = { path = "../lib" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
