[package]
name = "scruff_cli"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "scruff"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
scruff = { path = "../lib" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
