[package]
name = "scruff"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/forbjok/scruff.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
globset = "0.4.9"
tracing = "0.1.37"
walkdir = "2.3.3"
