[package]
name = "scruff"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/forbjok/scruff.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
globset = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
